# torch

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile.prototype  README.md  base_grid_interface.F90  binaries_user.py  bridge_multiples.py  bridge_multiples_for_rad_testing.py  bridge_multiples_ppds.py  flash.par.binaries  flash.par.fervent  flash.par.paperI  flash.par.radtest  flash.par.turbsph_standard  flash.par.vettam  flash.par.virial  flash.par.voramr  install.sh  interface.F90  interface.py  ionizingflux.py  josh_multiples.py  relink.sh  run.sh  torch_user.py  torch_user_ppds.py  turb-sphere-fake.py  turb-sphere.py  turb-uniform.py  virial.py  weighscale.py
.deprecated/: bridge_multiples_for_rad_testing.py
docs/: Makefile
refactor/: README  bridge_multiples_at.py  distilled_bridge.py  distilled_bridge_pseudocode.py  distilled_bridge_pseudocode_moredistilled.py  imf_sample.py  torch.py  torch_ic.py  torch_param.py  torch_se.py  torch_sf.py  torch_state.py
refactor.v2/: backup.sh  imf_sample.py  ionizingflux.py  multiples_aaron.py  torch.py  torch_mainloop.py  torch_param.py  torch_se.py  torch_sf.py  torch_state.py  torch_stdout.py  torch_user.py  torch_user_one_star.py
src/: Vettam2Torch.py  binaries_mainloop.py  binaries_sf.py  binaries_state.py  binary_identification.py  imf_binaries.py  imf_sample.py  ionizingflux.py  multiples.py  multiples_mod.py  primordial_binaries.py  torch_mainloop.py  torch_mainloop_mt.py  (+7 more)
support/: .gitignore  Makefile.h.in  aclocal.m4  configure  configure.ac  flash-4.6.2.patch
support/m4/: amuse_lib_hdf5.m4  torch_petsc.m4
(+732 files in other folders)
